feat: search endpoints with jwt
