# internal/auth.go
@@ -3,65 +3,59 @@ package internal
 import (
 	"errors"
 	"log"
-	"net/http"
-	"os"
-	"strings"
 
+	"github.com/Techeer-Hogwarts/search/config"
 	"github.com/gin-gonic/gin"
 	"github.com/golang-jwt/jwt/v5"
 )
 
 // JWTClaims represents the expected claims in the token
 type JWTClaims struct {
-	UserID string `json:"user_id"`
-	Role   string `json:"role"`
+	ID int `json:"id"`
 	jwt.RegisteredClaims
 }
 
-// ValidateJWT middleware checks the JWT token and extracts user claims
+var JWT_TOKEN string
+
+func init() {
+	JWT_TOKEN = config.GetEnvVarAsString("JWT_SECRET", "your_secret_key")
+}
+
+// ValidateJWT middleware checks the JWT token from cookies
 func ValidateJWT() gin.HandlerFunc {
 	return func(c *gin.Context) {
-		authHeader := c.GetHeader("Authorization")
-		if authHeader == "" {
-			c.JSON(http.StatusUnauthorized, gin.H{"error": "Missing Authorization header"})
-			c.Abort()
-			return
-		}
-
-		// Extract token from "Bearer <token>"
-		tokenString := strings.TrimPrefix(authHeader, "Bearer ")
-		if tokenString == authHeader {
-			c.JSON(http.StatusUnauthorized, gin.H{"error": "Invalid token format"})
-			c.Abort()
-			return
-		}
-
-		// Validate token
-		claims, err := validateToken(tokenString)
+		// Get Cookie value
+		cookie, err := c.Cookie("access_token")
 		if err != nil {
-			c.JSON(http.StatusUnauthorized, gin.H{"error": err.Error()})
-			c.Abort()
+			// Invalid JWT, allow the request to continue
+			c.Set("valid_jwt", false) // Flag indicating invalid JWT
+			c.Next()
 			return
 		}
 
-		// Attach user claims to context
-		c.Set("user_id", claims.UserID)
-		c.Set("role", claims.Role)
-
+		// Validate JWT
+		claims, err := validateToken(cookie)
+		if err != nil {
+			// Invalid JWT, allow the request to continue
+			c.Set("valid_jwt", false) // Flag indicating invalid JWT
+			c.Next()
+			return
+		}
+		// Attach user ID to context
+		c.Set("user_id", claims.ExpiresAt)
+		c.Set("valid_jwt", true)
 		c.Next()
 	}
 }
 
 // validateToken verifies the JWT and extracts claims
 func validateToken(tokenString string) (*JWTClaims, error) {
-	secretKey := os.Getenv("JWT_SECRET") // Use a secure secret key from env
-
 	token, err := jwt.ParseWithClaims(tokenString, &JWTClaims{}, func(token *jwt.Token) (interface{}, error) {
 		// Ensure signing method is HMAC
 		if _, ok := token.Method.(*jwt.SigningMethodHMAC); !ok {
 			return nil, errors.New("unexpected signing method")
 		}
-		return []byte(secretKey), nil
+		return []byte(JWT_TOKEN), nil
 	})
 
 	if err != nil || !token.Valid {
